--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,6 +26,11 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
+    <!-- Font Awesome Icons -->
+    <script
+      src="https://kit.fontawesome.com/acbbd9e886.js"
+      crossorigin="anonymous"
+    ></script>
     <title>NHL Stat Guy</title>
   </head>
   <body>
